fix: fix color and gap

--- a/src/assets/styles/components/button.css
+++ b/src/assets/styles/components/button.css
@@ -15,8 +15,7 @@
 }
 
 .button--secondary {
-    border: 1px solid #FFC9C9;
-    background-color: var(--color-light-red);
+    border: 2px solid var(--color-red);
 }
 
 .button--half {
